--- a/content.html
+++ b/content.html
@@ -1,7 +1,16 @@
 <!DOCTYPE html>
 <html lang=""en>
     <head>
-        <title></title>
+        <title>Work Term Report</title>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     </head>
+    <body>
+        <div class="container-fluid pt-5 my-5 bg-dark text-white">
+            <h1>Summer 2024 Work Term Report</h1>
+            <p>Example paragraph</p>
+        </div>
+    </body>
 </html>
