--- a/content.html
+++ b/content.html
@@ -5,12 +5,44 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+        <style>
+            /* .background-colour {
+                background
+            } */
+            .card-img-top {
+                width: 250px; /* Adjust as needed */
+                height: auto;  /* Maintain aspect ratio */
+            }
+            .card-text {
+                font-size: large;
+            }
+        </style>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     </head>
     <body>
-        <div class="container-fluid pt-5 my-5 bg-dark text-white">
-            <h1>Summer 2024 Work Term Report</h1>
-            <p>Example paragraph</p>
+        <div class="mt-4 p-5 bg-black text-white">
+            <h1>Summer 2024 Work Term Report</h1> <!-- Want to make some kind of big banner/jumbotron, either image or colours-->
+            <h5>Student Project Coordinator</h5>
+        </div>
+
+        <div class="row">
+            <div style="width:auto"></div>
+
+            <div class="card ms-5 mt-4" style="width: 270px;">
+                <img class="card-img-top" src="chandos_logo.png" alt="Company Logo" style="card-image-top">
+                <div class="card-body">
+                    <h3 class="card-title">Chandos Construction</h3>
+                </div>
+            </div>
+
+            <div style="width:auto"></div>
+
+            <div class="card ms-5 mt-4" style="width: 700px;">
+                <div class="card-body">
+                    <h4>Information about company here</h4>
+                </div>
+            </div>
+
         </div>
     </body>
 </html>
