Did more work on front-end interface and styling

--- a/content.html
+++ b/content.html
@@ -44,5 +44,29 @@
             </div>
 
         </div>
+        <div class="row"> <!--Second row, testing scrolling-->
+            <div style="width:auto"></div>
+
+            <div class="card ms-5 mt-4" style="width: 270px;">
+                <img class="card-img-top" src="python_logo.png" alt="Company Logo" style="card-image-top">
+                <div class="card-body">
+                    <h3 class="card-title">example image</h3>
+                </div>
+            </div>
+
+            <div style="width:auto"></div>
+
+            <div class="card ms-5 mt-4" style="width: 700px;">
+                <div class="card-body">
+                    <h4>Second row of cards</h4>
+                </div>
+            </div>
+
+        </div>
+        <!--Goals subheading-->
+        <div class="mt-4 p-5 bg-success text-white rounded" style="padding-left: 10%; padding-right: 10%;"> <!--Styling doesn't work, use actual CSS at top of file-->
+            <h2>Learning Goals</h2> <!-- Want to make some kind of big banner/jumbotron, either image or colours-->
+        </div>
+
     </body>
 </html>
