--- a/content.html
+++ b/content.html
@@ -19,8 +19,18 @@
         </style>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     </head>
-    <body>
-        <div class="mt-4 p-5 bg-black text-white">
+    <body data-bs-spy="scroll" data-bs-target=".navbar" data-bs-offset="50">
+        <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
+            <div class="container-fluid">
+                <ul class="navbar-nav">
+                    <li class="nav-item"><a class="nav-link" href="#intro">Introduction</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#learning-goals">Learning Goals</a></li>
+                </ul>
+
+            </div>
+        </nav>
+
+        <div class="mt-4 p-5 bg-black text-white" id="intro">
             <h1>Summer 2024 Work Term Report</h1> <!-- Want to make some kind of big banner/jumbotron, either image or colours-->
             <h5>Student Project Coordinator</h5>
         </div>
@@ -63,10 +73,20 @@
             </div>
 
         </div>
+        <div style="margin-bottom: 5%;"></div>
         <!--Goals subheading-->
-        <div class="mt-4 p-5 bg-success text-white rounded" style="padding-left: 10%; padding-right: 10%;"> <!--Styling doesn't work, use actual CSS at top of file-->
+        <div id="learning-goals" class="mt-4 p-5 text-white rounded" style="width: 97%; margin: auto; background-color:green;"> <!--Styling doesn't work, use actual CSS at top of file-->
             <h2>Learning Goals</h2> <!-- Want to make some kind of big banner/jumbotron, either image or colours-->
         </div>
+        <div class="col">
+            <div class="row">
+                <!-- Row 1, write each goal here-->
+            </div>
+            <div class="row">
+                <!-- Row 2, each reflection will go here-->
+            </div>
+        </div>
+
 
     </body>
 </html>
