Completed learning goals + reflections

--- a/content.html
+++ b/content.html
@@ -64,7 +64,7 @@
                 </div>
             </div>
 
-            <div style="width:auto"></div>
+            <div style="width: auto;"></div>
 
             <div class="card ms-5 mt-4" style="width: 700px;">
                 <div class="card-body">
@@ -76,14 +76,116 @@
         <div style="margin-bottom: 5%;"></div>
         <!--Goals subheading-->
         <div id="learning-goals" class="mt-4 p-5 text-white rounded" style="width: 97%; margin: auto; background-color:green;"> <!--Styling doesn't work, use actual CSS at top of file-->
-            <h2>Learning Goals</h2> <!-- Want to make some kind of big banner/jumbotron, either image or colours-->
+            <h2>Learning Goals</h2>
         </div>
-        <div class="col">
-            <div class="row">
-                <!-- Row 1, write each goal here-->
+        
+
+        <div style="margin-top: 3%; margin-left: 2%;"><h3>CRITICAL & CREATIVE THINKING - Problem Solving</h3></div> 
+        <div id="goal-1" class="row" style="margin-top: 2%; margin-left: 2%; margin-right: 2%;">
+            <!-- Row 1, write each goal here-->
+            <div class="card mt-3" style="padding-top: 1%; width: 23%; margin: auto;">
+                <div class="card-title"><h5>Goal</h5></div>
+                <div class="card-body"><h6>One of my goals is to improve my problem solving skills through professional experience. I believe that this is already one of my strengths, however there is always room to grow, especially in a field as technical as Computer Science.</h6></div> 
             </div>
-            <div class="row">
-                <!-- Row 2, each reflection will go here-->
+            <div class="card mt-3" style="padding-top:1%; width: 23%; margin: auto; padding-bottom: 1.05%;">
+                <div class="card-title"><h5>Action Plan</h5></div>
+                <div class="card-body"><h6>My plan for achieving this goal is to actively seek out opportunities wherever possible to approach problems in novel ways, and use my creative and critical thinking skills to find an optimal solution. </h6></div>
+            </div>
+            <div class="card mt-3" style="padding-top: 1%; width: 23%; padding-bottom: 2.1%; margin: auto;">
+                <div class="card-title"><h5>Measure of Success</h5></div>
+                <div class="card-body"><h6>	I will measure the success of this goal through my own personal feelings about my work and the comments of my superiors.</h6></div>
+            </div>
+            <div class="card mt-3" style="padding-top: 1%; width: 23%; margin: auto;">
+                <div class="card-title"><h5>Reflection</h5></div>
+                <div class="card-body"><h6>	I feel that I have achieved this goal with great success. I have often created my own software solutions to given problems, leveraging my expertise to save company time and reducing required manpower.</h6></div>
+            </div>
+        </div>
+
+
+        <div style="margin-top: 3%; margin-left: 2%;"><h3>COMMUNICATING - Written Communication</h3></div> 
+        <div id="goal-2" class="row" style="margin-top: 2%; margin-left: 2%; margin-right: 2%;">
+            <!-- Row 2, each reflection will go here-->
+            <div class="card mt-3" style="padding-top: 1%; width: 23%; margin: auto; padding-bottom: 4.2%;">
+                <div class="card-title"><h5>Goal</h5></div>
+                <div class="card-body"><h6>	One of my goals is to improve my communication skills, primarily written and professional correspondence.</h6></div> 
+            </div>
+            <div class="card mt-3" style="padding-top:1%; width: 23%; margin: auto; padding-bottom: 4.2%;">
+                <div class="card-title"><h5>Action Plan</h5></div>
+                <div class="card-body"><h6>I plan to achieve this goal by taking opportunities to communicate with co-workers or partners, and actively focusing on my professional personality.</h6></div>
+            </div>
+            <div class="card mt-3" style="padding-top: 1%; width: 23%; padding-bottom: 3.15%; margin: auto;">
+                <div class="card-title"><h5>Measure of Success</h5></div>
+                <div class="card-body"><h6>	I will measure the success of this goal through my own analysis of the change in my communication style, as well as potential feedback from the people I communicate with the most.</h6></div>
+            </div>
+            <div class="card mt-3" style="padding-top: 1%; width: 23%; margin: auto;">
+                <div class="card-title"><h5>Reflection</h5></div>
+                <div class="card-body"><h6> I feel that I have achieved this goal with great success. One of the most important aspects of my day-to-day work is communicating with contacts from our partner companies, and this has given me much more experience with professional communication which will apply itself well to my career going forward.</h6></div>
+            </div>
+        </div>
+
+
+        <div style="margin-top: 3%; margin-left: 2%;"><h3>PROFESSIONAL & ETHICAL BEHAVIOUR - Personal Organization/Time Management</h3></div> 
+        <div id="goal-3" class="row" style="margin-top: 2%; margin-left: 2%; margin-right: 2%;">
+            <!-- Row 3, each reflection will go here-->
+            <div class="card mt-3" style="padding-top: 1%; width: 23%; margin: auto;">
+                <div class="card-title"><h5>Goal</h5></div>
+                <div class="card-body"><h6> One of my goals is to improve my personal organization/time management skills. This has been one of my weaknesses in the past, therefore I believe it will have a significant impact on my future professional and academic success.</h6></div> 
+            </div>
+            <div class="card mt-3" style="padding-top:1%; width: 23%; margin: auto;">
+                <div class="card-title"><h5>Action Plan</h5></div>
+                <div class="card-body"><h6> I plan to achieve this goal through my normal designated work, with the addition of consciously trying to find optimizations that could be made to reduce the time/work required and be able to handle more tasks concurrently.</h6></div>
+            </div>
+            <div class="card mt-3" style="padding-top: 1%; width: 23%; margin: auto;">
+                <div class="card-title"><h5>Measure of Success</h5></div>
+                <div class="card-body"><h6>	I will measure the success of this goal through both my own observations and comments from my superiors about areas where I may have improved a process' efficiency or saved valuable time directly due to my effective problem solving.</h6></div>
+            </div>
+            <div class="card mt-3" style="padding-top: 1%; width: 23%; margin: auto; padding-bottom: 1.05%;">
+                <div class="card-title"><h5>Reflection</h5></div>
+                <div class="card-body"><h6> I feel that I have achieved this goal with great success. I completed most work given to me very quickly, leaving myself open to take upon more tasks and increase productivity.</h6></div>
+            </div>
+        </div>
+
+
+        <div style="margin-top: 3%; margin-left: 2%;"><h3>CRITICAL & CREATIVE THINKING - Depth & Breadth of Understanding</h3></div> 
+        <div id="goal-4" class="row" style="margin-top: 2%; margin-left: 2%; margin-right: 2%">
+            <!-- Row 4, each reflection will go here-->
+            <div class="card mt-3" style="padding-top: 1%; width: 23%; margin: auto; padding-bottom: 5.25%;">
+                <div class="card-title"><h5>Goal</h5></div>
+                <div class="card-body"><h6> One of my goals is to improve both the depth and breadth of my knowledge of various subjects. This is a vital part of intelligence and I think I may come out with a more complete perspective.</h6></div> 
+            </div>
+            <div class="card mt-3" style="padding-top:1%; width: 23%; margin: auto; padding-bottom: 2.1%;">
+                <div class="card-title"><h5>Action Plan</h5></div>
+                <div class="card-body"><h6> I plan to achieve this goal mostly through my designated work, however some external research from myself may be beneficial. This should be quite easy to achieve, given that my knowledge of construction software is significantly more limited than my knowledge of more specific Computer Science topics. </h6></div>
+            </div>
+            <div class="card mt-3" style="padding-top: 1%; width: 23%; margin: auto; padding-bottom: 5.25%;">
+                <div class="card-title"><h5>Measure of Success</h5></div>
+                <div class="card-body"><h6>		I will measure the success of this goal through my own feelings about my level of knowledge going into and coming out of the job. Ideally both my depth and breadth of information will increase.</h6></div>
+            </div>
+            <div class="card mt-3" style="padding-top: 1%; width: 23%; margin: auto;">
+                <div class="card-title"><h5>Reflection</h5></div>
+                <div class="card-body"><h6> 	I feel that I have achieved this goal with moderate success. I have gained a significant amount of knowledge about construction procedures and technical terms, however this is not especially relevant to my career going forward. I have also gained some relevant knowledge about certain software libraries and procedures through my own initiative to make the role better suited to my strengths.</h6></div>
+            </div>
+        </div>
+
+
+        <div style="margin-top: 3%; margin-left: 2%;"><h3>CRITICAL & CREATIVE THINKING - Creativity</h3></div> 
+        <div id="goal-5" class="row" style="margin-top: 2%; margin-left: 2%; margin-right: 2%">
+            <!-- Row 5, each reflection will go here-->
+            <div class="card mt-3" style="padding-top: 1%; width: 23%; margin: auto; padding-bottom: 2.1%;">
+                <div class="card-title"><h5>Goal</h5></div>
+                <div class="card-body"><h6> One of my goals is to enhance my capacity for creative thinking. This is an especially helpful skill to have as a computer scientist and something that I wish to improve.</h6></div> 
+            </div>
+            <div class="card mt-3" style="padding-top:1%; width: 23%; margin: auto; padding-bottom: 2.1%;">
+                <div class="card-title"><h5>Action Plan</h5></div>
+                <div class="card-body"><h6> I plan to achieve this goal through my own desire to work through problems in unique ways, which would primarily be by trying to optimize the work already being given to me. </h6></div>
+            </div>
+            <div class="card mt-3" style="padding-top: 1%; width: 23%; margin: auto; padding-bottom: 1.05%;">
+                <div class="card-title"><h5>Measure of Success</h5></div>
+                <div class="card-body"><h6>	I would measure the success of this goal primarily through my own feelings about my ability before the work term versus after the work term. However, feedback from superiors would also help me to gauge my progress.</h6></div>
+            </div>
+            <div class="card mt-3" style="padding-top: 1%; width: 23%; margin: auto;">
+                <div class="card-title"><h5>Reflection</h5></div>
+                <div class="card-body"><h6> I feel that I have achieved this goal with moderate success. I enjoyed needing to think critically about how to handle certain tasks, and whether something could be improved using a software script or not. Going forward this remains a goal that I would like to work towards. </h6></div>
             </div>
         </div>
 
