Fixed python image

--- a/content.html
+++ b/content.html
@@ -38,7 +38,7 @@
         <div class="row">
             <div style="width:auto"></div>
 
-            <div class="card ms-5 mt-4" style="width: 270px;">
+            <div class="card ms-5 mt-4" style="width: 275px;">
                 <img class="card-img-top" src="chandos_logo.png" alt="Company Logo" style="card-image-top">
                 <div class="card-body">
                     <h3 class="card-title">Chandos Construction</h3>
@@ -57,10 +57,10 @@
         <div class="row"> <!--Second row, testing scrolling-->
             <div style="width:auto"></div>
 
-            <div class="card ms-5 mt-4" style="width: 270px;">
-                <img class="card-img-top" src="python_logo.png" alt="Company Logo" style="card-image-top">
+            <div class="card ms-5 mt-4" style="width: 275px; padding-top: 1%;">
+                <img class="card-img-top" src="python_logo_1.png" alt="Company Logo" style="card-image-top">
                 <div class="card-body">
-                    <h3 class="card-title">example image</h3>
+                    <h3 class="card-title">Technologies Used</h3>
                 </div>
             </div>
 
