--- a/content.html
+++ b/content.html
@@ -24,6 +24,7 @@
             <div class="container-fluid">
                 <ul class="navbar-nav">
                     <li class="nav-item"><a class="nav-link" href="#intro">Introduction</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#job-description">Job Description</a></li>
                     <li class="nav-item"><a class="nav-link" href="#learning-goals">Learning Goals</a></li>
                 </ul>
 
@@ -45,9 +46,9 @@
                 </div>
             </div>
 
-            <div style="width:auto"></div>
+            <div style="width:auto;"></div>
 
-            <div class="card ms-5 mt-4" style="width: 700px;">
+            <div class="card ms-5 mt-4" style="width: 70%;">
                 <div class="card-body">
                     <h4>Information about company here</h4>
                 </div>
@@ -58,7 +59,7 @@
             <div style="width:auto"></div>
 
             <div class="card ms-5 mt-4" style="width: 275px; padding-top: 1%;">
-                <img class="card-img-top" src="python_logo_1.png" alt="Company Logo" style="card-image-top">
+                <img class="card-img-top" src="python_logo.png" alt="Python Logo" style="width: 200px; padding-left: 20%;">
                 <div class="card-body">
                     <h3 class="card-title">Technologies Used</h3>
                 </div>
@@ -66,13 +67,49 @@
 
             <div style="width: auto;"></div>
 
-            <div class="card ms-5 mt-4" style="width: 700px;">
+            <div class="card ms-5 mt-4" style="width: 70%;">
                 <div class="card-body">
                     <h4>Second row of cards</h4>
                 </div>
             </div>
 
         </div>
+
+        <!--Job description heading-->
+        <div style="margin-bottom: 5%;"></div>
+        <div id="job-description" class="mt-4 p-5 text-white rounded" style="width: 97%; margin: auto; background-color:darkblue;"> <!--Styling doesn't work, use actual CSS at top of file-->
+            <h2>Job Description</h2>
+        </div>
+
+        <div class="row"> <!--First row of JD section-->
+            <div class="col" style="width:auto">
+                <div class="card ms-5 mt-4" style="width: auto;">
+                    <div class="card-body">
+                        <h5>The project I was assigned to for the duration of this work term was the total renovation of the Town of Aurora's Town Square. This included the library, a new cultural centre, a bridge connecting the two, and an ice rink in the courtyard.</h5>
+                    </div>
+                </div>
+                <div class="card ms-5 mt-4" style="width: auto;">
+                    <div class="card-body">
+                        <h5>The parts of this project that were relevant to me included coordinating outstanding tasks between trades, tracking deficiencies in the construction, and monitoring the physical status of the site. For these tasks I used Viewpoint's Team and Field View software, Microsoft Excel, and Openspace. These responsibilities did not have a high degree of relevance to my degree or the knowledge gained during my academic semesters. The majority of my academic development in this role has come from my own initiative and desire to enhance the work with my own skills and areas of expertise.</h5>
+                    </div>
+                </div>
+                <div class="card ms-5 mt-4" style="width: auto;">
+                    <div class="card-body">
+                        <h5>As of the 1-month mark, the majority of my daily work has involved programming of some kind. Many of the day-to-day tedious tasks our team needs to complete have now been automated by me using my existing knowledge of programming languages. In this job the language I used most frequently was Python, alongside useful libraries such as <a href="https://pandas.pydata.org/">Pandas,</a> <a href="https://numpy.org/">NumPy,</a> <a href="https://matplotlib.org/">matplotlib,</a> <a href="https://pytorch.org/">PyTorch,</a> and <a href="https://www.github.com/tmalik1116/">GitHub</a> for version control. These scripts were never prompted by my superiors but were universally impressive and welcomed. This allowed me to fundamentally change the day to day work and make the job more suited to my career development whilst also increasing the productivity of the people I work with.</h5>
+                    </div>
+                </div>
+            </div>
+
+            
+            <div class="card ms-4 mt-4 me-5" style="width: 55%; padding-top: 1%;">
+                <img class="rounded" src="square_image.jpg" alt="Image of site" style="width: 100%">
+                <div class="card-body">
+                    <h3 class="card-title">Site Mock-up</h3>
+                </div>
+            </div>
+        </div>
+
+
         <div style="margin-bottom: 5%;"></div>
         <!--Goals subheading-->
         <div id="learning-goals" class="mt-4 p-5 text-white rounded" style="width: 97%; margin: auto; background-color:green;"> <!--Styling doesn't work, use actual CSS at top of file-->
