--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <div class="row">
         
                     <div class="card" style="width: 22%; margin-top: 2%; margin-left: 2.25%; border-radius: 20px;">
-                        <img class="card-img-top" src="'chandos_logo.png'" alt="Company Logo" style="width: 90%; display: block; margin-left: auto; margin-right: auto">
+                        <img class="card-img-top" src="chandos_logo.png" alt="Company Logo" style="width: 90%; display: block; margin-left: auto; margin-right: auto">
                         <div class="card-body">
                             <h3 class="card-title">Chandos Construction</h3>
                         </div>
