--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
             <!-- div for embedded video-->
             <div class="card" style="width: 42%; margin-top: 1%; margin-left: 2.75%; margin-right: 1%; border-radius: 20px;">
                 <video width="100%" height="100%" controls  muted style="display: block; margin-top: 2%; margin-bottom: 2%; margin-left: 0%; margin-right: 0%; object-fit: cover !important; border-radius: 12px !important;">
-                    <source src="./PXL_20240906_202221972.mp4" type="video/mp4">
+                    <source src="https://github.com/tmalik1116/tmalik1116.github.io/./PXL_20240906_202221972.mp4" type="video/mp4">
                     This video is not supported by your browser.
                 </video>
             </div>
