--- a/index.html
+++ b/index.html
@@ -140,7 +140,8 @@
                     </div>
                 </div>
             </div>
-            
+            <!-- adding comment for commit -->
+
             <!-- div for embedded video-->
             <div class="card" style="width: 50%; margin-top: 3%; margin-left: auto; margin-right: 2.5%; border-radius: 20px;">
                 <video width="100%" height="100%" controls  muted style="display: block; margin-top: 1.5%; margin-bottom: 1.5%; margin-left: 0%; margin-right: 0%; object-fit: cover !important; border-radius: 12px !important;">
