--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
             <!-- div for embedded video-->
             <div class="card" style="width: 50%; margin-top: 3%; margin-left: auto; margin-right: 2.5%; border-radius: 20px;">
                 <video width="100%" height="100%" controls  muted style="display: block; margin-top: 1.5%; margin-bottom: 1.5%; margin-left: 0%; margin-right: 0%; object-fit: cover !important; border-radius: 12px !important;">
-                    <source src="https://tmalik1116.github.io/Work_Term_Report_S24/PXL_20240619_184109334.mp4" type="video/mp4">
+                    <source src="PXL_20240619_184109334.mp4" type="video/mp4">
                     This video is not supported by your browser.
                 </video>
             </div>
@@ -159,7 +159,7 @@
             <!-- div for embedded video-->
             <div class="card" style="width: 42%; margin-top: 1%; margin-left: 2.75%; margin-right: 1%; border-radius: 20px;">
                 <video width="100%" height="100%" controls  muted style="display: block; margin-top: 2%; margin-bottom: 2%; margin-left: 0%; margin-right: 0%; object-fit: cover !important; border-radius: 12px !important;">
-                    <source src="https://tmalik1116.github.io/Work_Term_Report_S24/./PXL_20240906_202221972.mp4" type="video/mp4">
+                    <source src="./PXL_20240906_202221972.mp4" type="video/mp4">
                     This video is not supported by your browser.
                 </video>
             </div>
